snapshots/com/wadpam/openserver/errors/1-SNAPSHOT/errors-1-20121002.045704-1.pom.md5
dc9615262956802269ce67601e37c14b